# imgui_yaml_viewer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: ErrorView.h  GlfwBackendBinding.h  IYamlEditView.h  YamlEditView.h  YamlValidationModel.h  YamlViewModel.h
src/: ErrorView.cpp  GlfwBackendBinding.cpp  YamlEditView.cpp  YamlValidationModel.cpp  YamlViewModel.cpp  main.cpp
